2014-04-07  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/printer/Fuji_Xerox-DocuPrint_CM305_df.xml: Corrected order
	  of the margin dimensions to get a correct PPD file (Bug #1195).

2014-04-02  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/opt/Postscript-RGBProfile.xml: Added RGBProfile option
	  for correct SRGB use with the Fuji Xerox DocuPrint CM305 df in
	  PostScript mode (Thanks to Adrian Johnson for this contribution.
	* db/source/opt/Postscript-InputSlot.xml: Added nissing default value
	  for the Fuji Xerox DocuPrint CM305 df in PostScript mode.

2014-03-31 Andrey Makhalkin <a.makhalkin@samsung.com>
      * db/source/PPD/Samsung/PS/Samsung_M332x_382x_402x_Series.ppd,
        db/source/printer/Samsung-M332x_382x_402x.xml:
	Added a new model - Samsung M332x 382x 402x

      * db/source/PPD/Samsung/PS/Samsung_M337x_387x_407x_Series.ppd,
        db/source/printer/Samsung-M337x_387x_407x.xml:
	Corrected PPD defaults and DEVICE ID string

2014-03-18 Deng Pang <DengPang@rst.ricoh.com>
	db/source/printer/Ricoh-AficioSG3110DN.xml
        db/source/printer/Ricoh-AficioSG3110DNw.xml
	Fixed PXL PPD path in xml files.

2014-03-14 Deng Pang <DengPang@rst.ricoh.com>
      * db/source/PPD/Gestetner/PS/Gestetner-DSc1020_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-DSc1020_PXL.ppd,
        db/source/printer/Gestetner-DSc1020.xml,
        db/source/PPD/Gestetner/PS/Gestetner-DSc1025_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-DSc1025_PXL.ppd,
        db/source/printer/Gestetner-DSc1025.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_C2003_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_C2003_PXL.ppd,
        db/source/printer/Gestetner-MP_C2003.xml,
        db/source/PPD/Gestetner/PS/Gestetner-MP_C2503_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_C2503_PXL.ppd,
        db/source/printer/Gestetner-MP_C2503.xml,
        db/source/PPD/Lanier/PS/Lanier-MP_C2003_PS.ppd,