@@ -1,0 +1,46 @@
+<printer id="printer/Brother-HL-2135">
+  <make>Brother</make>
+  <model>HL-2135</model>
+  <mechanism>
+    <laser />
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://support.brother.com/g/s/id/linux/en/</url>
+  <lang>
+    <proprietary />
+    <pjl />
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <functionality>B</functionality>
+  <driver>hl1250</driver>
+  <drivers>
+    <driver>
+      <id>gimp-print</id>
+    </driver>
+    <driver>
+      <id>gutenprint</id>
+    </driver>
+    <driver>
+      <id>hl1250</id>
+    </driver>
+    <driver>
+      <id>hpijs-pcl5e</id>
+    </driver>
+    <driver>
+      <id>lj4dith</id>
+    </driver>
+    <driver>
+      <id>lj5gray</id>
+    </driver>
+    <driver>
+      <id>ljet4</id>
+    </driver>
+  </drivers>
+</printer>
