@@ -1,3 +1,8 @@
+2014-04-10  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* db/source/printer/Brother-HL-2135.xml: Added Brother HL-2135
+	  (Ubuntu bug #1180996).
+
 2014-04-07  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* db/source/printer/Fuji_Xerox-DocuPrint_CM305_df.xml: Corrected order
